Visualization & sampling complete, human consumption rendering needs to be done locally

--- a/MsPacmanDQN.ipynb
+++ b/MsPacmanDQN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOozuaz/EH5SxMWUQkNtQ2t"
+      "authorship_tag": "ABX9TyOXQIf0D2HAW0MUVYuDWJO8"
     },
     "kernelspec": {
       "name": "python3",
@@ -82,7 +82,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Create MsPacman environment, visualize the environment\n",
+        "Create MsPacman environment, visualize the environment.\n",
         "Our seed resets the RNG of the environment and produces a random state upon resetting"
       ],
       "metadata": {
@@ -105,11 +105,14 @@
         "env = gym.make(\"ALE/MsPacman-v5\")\n",
         "observation, info = env.reset(seed=42)\n",
         "\n",
+        "\n",
+        "\n",
         "#we are sampling 1000 actions from a possible selection of 9\n",
         "#generally excluded actions have no effect in the specific game\n",
         "#this env is built with 9 actions but can be tuned to 18 to match Atari systems\n",
+        "\n",
         "for _ in range(1000):\n",
-        "  action = env.action_space.sample() #remember sampling from 1 - 9 here\n",
+        "  action = env.action_space.sample() #remember, sampling from 1 - 9 here\n",
         "  observation, reward, terminated, truncated, info = env.step(action)\n",
         "\n",
         "  if terminated or truncated:\n",
@@ -121,7 +124,7 @@
       "metadata": {
         "id": "i7lQw5ux8UUO"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     }
   ]
